fix: Margin on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -18,28 +18,16 @@ li {
   line-height: 1.5em;
 }
 
-@media only screen and (min-width: 600px) {
-  .main {
-    width: 30%;
-  }
-
-  .footer {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-  }
-}
-
 .footer {
   margin-top: 50px;
 }
 
-.main h1 {
-  cursor: pointer;
+.main {
+  margin: 20px;
 }
 
-.main {
-  margin: 50px;
+.main h1 {
+  cursor: pointer;
 }
 
 .time {
@@ -59,4 +47,17 @@ li {
 
 .navigation {
   margin-top: 40px;
+}
+
+@media only screen and (min-width: 600px) {
+  .main {
+    width: 30%;
+    margin: 50px;
+  }
+
+  .footer {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+  }
 }
